Change overflow for book__p to auto to avoid ruining the grid

--- a/static/styles.css
+++ b/static/styles.css
@@ -105,7 +105,7 @@ button {
 }
 
 .book__p {
-  overflow: scroll;
+  overflow: auto;
   text-align: start;
 }
 
